--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,13 +1,7 @@
 {
+  "extends": "@tsconfig/node24/tsconfig.json",
   "compilerOptions": {
-    "target": "es2017" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    "module": "commonjs" /* Specify what module code is generated. */,
-    "rootDirs": [
-      "./src"
-    ] /* Allow multiple folders to be treated as one when resolving modules. */,
-    "outDir": "./build" /* Specify an output folder for all emitted files. */,
-    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-    "strict": true /* Enable all strict type-checking options. */
+    "noEmit": true,
+    "allowImportingTsExtensions": true
   }
 }
