feat: database connection with drizzle

--- a/api/.env-sample
+++ b/api/.env-sample
@@ -1,9 +1,5 @@
 # POSTGRES DATABASE CONFIGURATION
-DB_USER=ejc_hub
-DB_PASSWORD=ejc_hub
-DB_HOST=localhost
-DB_PORT=5434
-DB_NAME=ejc_hub
+DATABASE_URL=postgres://ejc_hub:ejc_hub@localhost:5434/ejc_hub
 
 # APP CONFIGURATION
 PORT=4000
