feat: auth0 integration with fastify

--- a/api/.env-sample
+++ b/api/.env-sample
@@ -1,5 +1,9 @@
-# POSTGRES DATABASE CONFIGURATION
+# Postgres Configuration
 DATABASE_URL=postgres://ejc_hub:ejc_hub@localhost:5434/ejc_hub
 
-# APP CONFIGURATION
+# App Configuration
 PORT=4000
+
+# Auth0 Configuration
+AUTH_TENANT_DOMAIN=my-tenant.us.auth0.com
+AUTH_AUDIENCE=my-api-identifier
