--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "drizzle-orm": "^0.44.2",
     "fastify": "^5.3.3",
     "fastify-type-provider-zod": "^5.0.1",
+    "jose": "^6.0.11",
     "pg": "^8.16.0",
     "zod": "^3.25.67"
   },
