--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "playwright": "^1.54.1",
     "prettier": "3.6.2",
     "storybook": "^9.0.16",
+    "storybook-addon-remix-react-router": "^5.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
