docs(api): update .env-sample

--- a/api/.env-sample
+++ b/api/.env-sample
@@ -5,5 +5,5 @@ DATABASE_URL=postgres://ejc_hub:ejc_hub@localhost:5434/ejc_hub
 PORT=4000
 
 # Auth0 Configuration
-AUTH_TENANT_DOMAIN=my-tenant.us.auth0.com
-AUTH_AUDIENCE=my-api-identifier
+AUTH_TENANT_DOMAIN=my-tenant.us.auth0.com # Auth0 Domain
+AUTH_AUDIENCE=my-api-identifier # Auth0 Application API Identifier
