--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "eslint-plugin-prettier": "^5.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.2",
     "react-dom": "^19.1.2",
     "react-hook-form": "^7.60.0",
