feat(api): routes authentication and authorization

--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint 'src/**/*.{ts,js}'",
     "lint:fix": "eslint 'src/**/*.{ts,js}' --fix",
     "format": "prettier --check .",
-    "format:fix": "prettier --write ."
+    "format:fix": "prettier --write .",
+    "db:migrate": "drizzle-kit migrate"
   },
   "keywords": [],
   "author": "",
