--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-table": "^8.21.3",
     "eslint-plugin-prettier": "^5.5.1",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.2",
