--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,9 @@
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.13.5",
     "clsx": "^2.1.1",
     "eslint-plugin-prettier": "^5.5.1",
     "jwt-decode": "^4.0.0",
